# CasCet

./: .gitignore  .vercelignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
apps/dashboard/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/dashboard/app/: globals.css  layout.tsx  manifest.ts  page.tsx
apps/dashboard/app/dashboard/: page.tsx
apps/dashboard/app/explorer/: page.tsx
apps/dashboard/app/playground/: page.tsx
apps/dashboard/app/withdraw/: page.tsx
apps/dashboard/components/: build-wizard.tsx  copy-button.tsx  logo.tsx  mode-toggle.tsx  payment-graph.tsx  receipts-table.tsx  revenue-split-panel.tsx  scroll-video.tsx  site-header.tsx  social-icons.tsx  stat-tiles.tsx  wallet-connect-button.tsx
apps/dashboard/components/landing/: cascade-flow.tsx  cinematic-intro.tsx  get-started.tsx  marketing-header.tsx  reveal.tsx  steps.tsx
apps/dashboard/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  (+5 more)
apps/dashboard/lib/: economy.ts  store.ts  use-casper-wallet.ts  use-live-state.ts  utils.ts  wallet-context.tsx
apps/dashboard/types/: casper-wallet.d.ts
clients/python/: README.md  cascet_x402.py  example_settle.py  requirements.txt
contracts/: .env.sample  CHANGELOG.md  Cargo.toml  Odra.toml  README.md
contracts/resources/: cascade-demo.toml  casper-contracts.toml  casper-test-contracts.toml  upgradable-registry.toml
contracts/src/: cascade_controller.rs  demo_token.rs  lib.rs  payment_channel.rs  receipt_registry.rs  revenue_split.rs
docs/: buidl-details.md  buidl-page.md  decisions.md  discord-mcp-handoff.md  final-round-plan.md  launch-kit.md  mainnet-readiness.md  onchain.md  submission.md  testing-playbook.md  x402-mcp-spec.md  youtube.md
examples/wrap-third-party/: README.md  cascet.config.json
servers/casper-defi-data/: package.json
servers/casper-defi-data/src/: index.ts
servers/portfolio-analyst/: package.json
servers/portfolio-analyst/src/: index.ts
tools/discord/: .env.sample  README.md  package.json  setup.mjs
tools/e2e/: package.json
tools/e2e/src/: fund-token.ts  gen-keys.ts  mock-facilitator.ts  real-facilitator.ts  run-agent-demo.ts  run-connect-demo.ts  run-demo.ts  run-facilitator.ts  run-real-mainnet.ts  run-real.ts
(+10 files in other folders)
