[package]
edition = "2021"
name = "cascet_contracts"
version = "0.1.0"

[dependencies]
odra = { version = "2.8.2", features = [], default-features = false }
# CEP-18 reference token: deployed alongside RevenueSplit as the demo payment
# token, and used in tests to exercise real token transfers. RevenueSplit's own
# wasm still talks to CEP-18 via a lean self-declared external interface.
odra-modules = { version = "2.8.2", default-features = false }

[dev-dependencies]
odra-test = { version = "2.8.2", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.8.2", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.2", features = [], default-features = false }
odra-cli = { version = "2.8.2", features = [], default-features = false }

[[bin]]
name = "cascet_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "cascet_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "cascet_contracts_cli"
path = "bin/cli.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
